Correção de Projeto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.curso.projetojuneko">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -11,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjetoJuneko">
         <activity
-            android:name=".CozinhaActivity"
+            android:name=".activity.CozinhaActivity"
             android:exported="false" />
         <activity
             android:name=".activity.EsqueceuSenhaActivity"
